Bug 111718 - Area tab bug: Unexpected interaction between bitmap and pattern settings
Summary: Area tab bug: Unexpected interaction between bitmap and pattern settings
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Jim Raykowski
URL:
Whiteboard: target:6.2.0
Keywords:
: 120456 (view as bug list)
Depends on:
Blocks: Area-Fill-Tab
  Show dependency treegraph
 
Reported: 2017-08-12 11:16 UTC by Tamás Zolnai
Modified: 2018-11-29 11:09 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of wrong pattern fill rendering (94.37 KB, image/png)
2017-08-12 11:18 UTC, Tamás Zolnai
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tamás Zolnai 2017-08-12 11:16:51 UTC
Description:
It seems there some some interactions between bitmap and pattern settings, since. After setting a stretched bitmap as a background to a shape and then set a pattern fill, the pattern's rendering is wrong it is scaled up (see screen shot).

Steps to Reproduce:
1. Open Impress
2. Create a shape and set a stretched bitmap background (Context menu -> Area... -> Bitmap)
3. Close Area dialog
4. Set the shape's background to a pattern fill (Context menu -> Area... -> Pattern)

Actual Results:  
Pattern background is messed up. The pattern has a wrong scale (see screenshot).

Expected Results:
Bitmap settings should not affect pattern settings.


Reproducible: Always

User Profile Reset: No

Additional Info:


User-Agent: Mozilla/5.0 (Windows NT 6.3; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.90 Safari/537.36
Comment 1 Tamás Zolnai 2017-08-12 11:18:05 UTC
Created attachment 135484 [details]
Screenshot of wrong pattern fill rendering
Comment 2 Telesto 2017-08-12 15:51:27 UTC
Repro with:
Version: 6.0.0.0.alpha0+
Build ID: 46b4eb8b0e9325f8c29cd391baf9504bccee1837
CPU threads: 4; OS: Windows 6.19; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2017-08-11_06:44:17
Locale: nl-NL (nl_NL); Calc: CL

Not limited to Impress.
Comment 3 Jim Raykowski 2018-07-28 22:35:40 UTC
I noticed this when looking at why the bitmap and pattern preview don't work in the area tab page.

Patches sent for these seem to resolve this interaction between bitmap and pattern settings.

https://gerrit.libreoffice.org/#/c/58206/
https://gerrit.libreoffice.org/#/c/58265/
Comment 4 Jim Raykowski 2018-08-04 23:29:30 UTC
(In reply to Jim Raykowski from comment #3)
> I noticed this when looking at why the bitmap and pattern preview don't work
> in the area tab page.
> 
> Patches sent for these seem to resolve this interaction between bitmap and
> pattern settings.
> 
> https://gerrit.libreoffice.org/#/c/58206/
> https://gerrit.libreoffice.org/#/c/58265/

I'm sorry these do not resolve the interaction between bitmap and pattern settings reported in this bug.
Comment 5 Jim Raykowski 2018-08-10 04:23:15 UTC
Here is a patch for this:
https://gerrit.libreoffice.org/#/c/58805/
Comment 6 Tamás Zolnai 2018-10-07 12:21:41 UTC
I just checked it on master and the issue is gone. Might be fixed as a sideeffect. So let's close this bug as worksforme.
Comment 7 Jim Raykowski 2018-10-07 23:46:58 UTC
I still repro with current master build.

Version: 6.2.0.0.alpha0+
Build ID: 8b119b972b37a7e497091167bb6944a1c167f9bb
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk2; 
Locale: en-US (en_US.UTF-8); Calc: threaded
Comment 8 Tamás Zolnai 2018-10-08 07:25:05 UTC
(In reply to Jim Raykowski from comment #7)
> I still repro with current master build.
> 
> Version: 6.2.0.0.alpha0+
> Build ID: 8b119b972b37a7e497091167bb6944a1c167f9bb
> CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk2; 
> Locale: en-US (en_US.UTF-8); Calc: threaded

Ah, OK then let's reopen this.
Comment 9 Commit Notification 2018-10-09 09:31:51 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4f6e104499625d69d2b37271d0fee52848c0a6d4

tdf#111718 Fix interaction between bitmap and pattern settings

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Tamás Zolnai 2018-10-09 21:30:03 UTC
In the meantime I managed to reproduce it again, so tested and pushed the fix.
Comment 11 Jim Raykowski 2018-10-09 21:50:57 UTC
Thanks for testing and doing the push :-).
Comment 12 Xisco Faulí 2018-10-10 08:17:18 UTC
*** Bug 120456 has been marked as a duplicate of this bug. ***
Comment 13 Xisco Faulí 2018-10-10 08:19:47 UTC
Verified in

Version: 6.2.0.0.alpha0+
Build ID: 87e3539d69626780c6d7531b725dd0d64c69e6d8
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded