tdf#111718 Fix interaction between bitmap and pattern settings

Change-Id: I1c68b9f1f51cb15a30f56eef08dc384d10355bf1